--- a/index.html
+++ b/index.html
@@ -112,6 +112,34 @@
       </div>
     </section>
     
+    <!-- Section awards -->
+    <section class="awards">
+      <div class="container">
+        <h2 class="text-center">Our Awards</h2>
+        <div class="row">
+          <div class="col-md-3">
+            <div class="award">
+              <img src="img/awards/1.png" class="img-responsive center-block">
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="award">
+              <img src="img/awards/2.png" class="img-responsive center-block">
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="award">
+              <img src="img/awards/3.png" class="img-responsive center-block">
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="award">
+              <img src="img/awards/4.png" class="img-responsive center-block">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
