Added carousel to the header with static text overlay

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
       <!-- Static header message -->
       <div class="main-text">
-        <div class="col-md-12 text-center">
+        <div class="col-md-12">
           <div class="hero-text text-center">
             <h2>Clean and fresh green food <br>for a healthy life</h2>
           </div>
